--- a/guerlab-sms-aliyun-starter/pom.xml
+++ b/guerlab-sms-aliyun-starter/pom.xml
@@ -17,25 +17,15 @@
     <dependencies>
         <dependency>
             <groupId>net.guerlab.sms</groupId>
-            <artifactId>guerlab-sms-server-starter</artifactId>
+            <artifactId>guerlab-sms-aliyun</artifactId>
+            <version>${revision}</version>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
 		</dependency>
-
-		<dependency>
-            <groupId>com.aliyun</groupId>
-            <artifactId>aliyun-java-sdk-core</artifactId>
-            <version>[4.3.2, 5.0.0)</version>
-        </dependency>
-        <dependency>
-            <groupId>com.aliyun</groupId>
-            <artifactId>aliyun-java-sdk-dysmsapi</artifactId>
-            <version>[2.1.0, 2.2.0)</version>
-        </dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
