--- a/guerlab-sms-baiducloud-starter/pom.xml
+++ b/guerlab-sms-baiducloud-starter/pom.xml
@@ -17,20 +17,14 @@
     <dependencies>
         <dependency>
             <groupId>net.guerlab.sms</groupId>
-            <artifactId>guerlab-sms-server-starter</artifactId>
+            <artifactId>guerlab-sms-baiducloud</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
-
-        <dependency>
-            <groupId>com.baidubce</groupId>
-            <artifactId>bce-java-sdk</artifactId>
-            <version>[0.10.148, 0.11.0)</version>
-        </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
