--- a/guerlab-sms-jdcloud-starter/pom.xml
+++ b/guerlab-sms-jdcloud-starter/pom.xml
@@ -17,20 +17,14 @@
     <dependencies>
         <dependency>
             <groupId>net.guerlab.sms</groupId>
-            <artifactId>guerlab-sms-server-starter</artifactId>
+            <artifactId>guerlab-sms-jdcloud</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
-
-        <dependency>
-            <groupId>com.jdcloud.sdk</groupId>
-            <artifactId>sms</artifactId>
-            <version>[1.3.0, 1.4.0)</version>
-        </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
