--- a/guerlab-sms-netease-starter/pom.xml
+++ b/guerlab-sms-netease-starter/pom.xml
@@ -18,19 +18,14 @@
     <dependencies>
         <dependency>
             <groupId>net.guerlab.sms</groupId>
-            <artifactId>guerlab-sms-server-starter</artifactId>
+            <artifactId>guerlab-sms-netease</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
-
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-        </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
