--- a/guerlab-sms-qcloud-starter/pom.xml
+++ b/guerlab-sms-qcloud-starter/pom.xml
@@ -17,20 +17,14 @@
     <dependencies>
         <dependency>
             <groupId>net.guerlab.sms</groupId>
-            <artifactId>guerlab-sms-server-starter</artifactId>
+            <artifactId>guerlab-sms-qcloud</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
-
-        <dependency>
-            <groupId>com.github.qcloudsms</groupId>
-            <artifactId>qcloudsms</artifactId>
-            <version>[1.0.6, 1.1.0)</version>
-        </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
