--- a/guerlab-sms-yunpian-starter/pom.xml
+++ b/guerlab-sms-yunpian-starter/pom.xml
@@ -17,20 +17,14 @@
     <dependencies>
         <dependency>
             <groupId>net.guerlab.sms</groupId>
-            <artifactId>guerlab-sms-server-starter</artifactId>
+            <artifactId>guerlab-sms-yunpian</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
-
-        <dependency>
-            <groupId>com.yunpian.sdk</groupId>
-            <artifactId>yunpian-java-sdk</artifactId>
-            <version>[1.2.0, 1.3.0)</version>
-        </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
