增加验证码业务的Type类型的可配置，增加VerificationCodeTypeGenerate接口用于对验证码业务的Type进行自定义

--- a/guerlab-sms-server-starter/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/guerlab-sms-server-starter/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -88,6 +88,13 @@
       "defaultValue": "true"
     },
     {
+      "name": "sms.verification-code.type",
+      "type": "java.lang.String",
+      "sourceType": "net.guerlab.sms.server.properties.VerificationCodeProperties",
+      "description": "验证码业务所使用的类型.",
+      "defaultValue": "VerificationCode"
+    },
+    {
       "name": "sms.verification-code.expiration-time",
       "type": "java.lang.Long",
       "sourceType": "net.guerlab.sms.server.properties.VerificationCodeProperties",
