--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
     </issueManagement>
 
     <properties>
-        <revision>2.0.0-SNAPSHOT</revision>
+        <revision>2.0.0</revision>
         <java.version>1.8</java.version>
         <project.encoding>UTF-8</project.encoding>
 
