--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
     </issueManagement>
 
     <properties>
-        <revision>2.0.1-SNAPSHOT</revision>
+        <revision>2.0.1</revision>
         <java.version>1.8</java.version>
         <project.encoding>UTF-8</project.encoding>
 
