--- a/guerlab-sms-aliyun/pom.xml
+++ b/guerlab-sms-aliyun/pom.xml
@@ -28,12 +28,12 @@
         <dependency>
             <groupId>com.aliyun</groupId>
             <artifactId>aliyun-java-sdk-core</artifactId>
-            <version>[4.3.2, 5.0.0)</version>
+            <version>4.6.0</version>
         </dependency>
         <dependency>
             <groupId>com.aliyun</groupId>
             <artifactId>aliyun-java-sdk-dysmsapi</artifactId>
-            <version>[2.1.0, 2.2.0)</version>
+            <version>2.2.1</version>
         </dependency>
 
         <dependency>
