--- a/guerlab-sms-baiducloud/pom.xml
+++ b/guerlab-sms-baiducloud/pom.xml
@@ -28,7 +28,7 @@
         <dependency>
             <groupId>com.baidubce</groupId>
             <artifactId>bce-java-sdk</artifactId>
-            <version>[0.10.148, 0.11.0)</version>
+            <version>0.10.202</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.apache.hbase</groupId>
