--- a/guerlab-sms-qcloud-v3/pom.xml
+++ b/guerlab-sms-qcloud-v3/pom.xml
@@ -28,7 +28,7 @@
         <dependency>
             <groupId>com.tencentcloudapi</groupId>
             <artifactId>tencentcloud-sdk-java-sms</artifactId>
-            <version>[3.1.0, 3.2.0)</version>
+            <version>3.1.483</version>
         </dependency>
 
         <dependency>
