--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>net.guerlab.builder</groupId>
         <artifactId>guerlab-builder</artifactId>
-        <version>1.0.3</version>
+        <version>1.2.0</version>
     </parent>
 
     <name>${project.groupId}:${project.artifactId}</name>
@@ -52,7 +52,7 @@
     </issueManagement>
 
     <properties>
-        <revision>2.0.1</revision>
+        <revision>2.1.0-SNAPSHOT</revision>
         <java.version>1.8</java.version>
         <project.encoding>UTF-8</project.encoding>
 
@@ -64,9 +64,9 @@
 
         <spring-boot.version>2.3.0.RELEASE</spring-boot.version>
 
-        <guerlab-loadbalancer.version>0.0.3</guerlab-loadbalancer.version>
+        <guerlab-loadbalancer.version>1.0.0</guerlab-loadbalancer.version>
 
-        <apache-httpclient.version>[4.5.0, 4.6.0)</apache-httpclient.version>
+        <apache-httpclient.version>4.5.13</apache-httpclient.version>
     </properties>
 
     <dependencyManagement>
