--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
 	</issueManagement>
 
 	<properties>
-		<revision>2.1.0-SNAPSHOT</revision>
+		<revision>2.1.0</revision>
 		<java.version>1.8</java.version>
 		<project.encoding>UTF-8</project.encoding>
 
